--- a/vue-shop-heima/src/assets/css/global.css
+++ b/vue-shop-heima/src/assets/css/global.css
@@ -6,6 +6,7 @@ body,
     height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 1366px;
     
 }
 
@@ -15,6 +16,7 @@ body,
     font-size: 12px;
 
 }
+
 
 
 .el-card{
